<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_page_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tween_gradient_animation"
    tools:context=".HealthHelperSignInPage">

    <Toolbar
        android:id="@+id/register_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/top_app_bar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/transparent"
                android:contentDescription="@string/app_bar_back_button"
                android:src="@drawable/ic_chevron_left_white_36dp" />

            <TextView
                android:id="@+id/top_app_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </Toolbar>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/round_edged_gradient"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/form_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">

        <TextView
            android:id="@+id/sign_in_form_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in_data"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sign_in_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_in_email_input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingTop="7dp"
            android:paddingEnd="8dp"
            android:paddingBottom="7dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sign_in_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_in_password_input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingTop="7dp"
            android:paddingEnd="8dp"
            android:paddingBottom="7dp"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/form_sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:paddingRight="10dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>